[package]
name = "sb7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
once_cell = "^1.9.0"
image = "^0.23.14"
quad-rand = "^0.2.1"


[dependencies.web-sys]
version = "0.3.56"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'HtmlInputElement',
    'NodeList',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlUniformLocation',
    'WebGlTexture',
    'WebglCompressedTextureAstc',
    'WebglCompressedTextureAtc',
    'WebglCompressedTextureEtc',
    'WebglCompressedTextureEtc1',
    'WebglCompressedTexturePvrtc',
    'WebglCompressedTextureS3tc',
    'WebglCompressedTextureS3tcSrgb',
    'Window',
    'Performance',
    'PerformanceTiming',
    'KeyboardEvent',
    'console',
]
