[package]
name = "sb7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
# https://github.com/image-rs/image/issues/879#issuecomment-472009104
image = { version = "^0.23.14", default-features = false, features = ["jpeg", "png", "webp"] }
quad-rand = "^0.2.1"

[dependencies.web-sys]
version = "0.3.56"
features = [
    'Document',
    'DomStringMap',
    'Element',
    'HtmlCanvasElement',
    'HtmlInputElement',
    'NodeList',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlUniformLocation',
    'WebGlTexture',
    'WebglCompressedTextureAstc',
    'WebglCompressedTextureAtc',
    'WebglCompressedTextureEtc',
    'WebglCompressedTextureEtc1',
    'WebglCompressedTexturePvrtc',
    'WebglCompressedTextureS3tc',
    'WebglCompressedTextureS3tcSrgb',
    'Window',
    'Performance',
    'PerformanceTiming',
    'KeyboardEvent',
    'console',
]
