[package]
name = "sb7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "^0.14.0"
once_cell = "^1.9.0"
stb_image = "^0.2.3"
rand = "^0.8.5"

[dependencies.imgui-glfw-rs]
git = "https://github.com/yilozt/imgui-glfw-rs"

[[bin]]
name = "test"
path = "my_test/test.rs"
